--- a/MauiBankingExercise/MauiBankingExercise.csproj
+++ b/MauiBankingExercise/MauiBankingExercise.csproj
@@ -64,6 +64,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 			<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 			<PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
+			<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.0.4" />
 	</ItemGroup>
 
 </Project>
