--- a/MauiBankingExercise/MauiBankingExercise.csproj
+++ b/MauiBankingExercise/MauiBankingExercise.csproj
@@ -64,7 +64,17 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 			<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 			<PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
+			<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="3.0.1" />
 			<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.0.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\CustomerDashboardView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\TransactionView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
