--- a/MauiBankingExercise/MauiBankingExercise.csproj
+++ b/MauiBankingExercise/MauiBankingExercise.csproj
@@ -66,6 +66,7 @@
 			<PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
 			<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="3.0.1" />
 			<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.0.4" />
+			<PackageReference Include="CommunityToolKit.Maui" Version="12.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
